-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.10.0, 6.11
-
6618d6043 (dev), 0380d8a6d (6.10)
-
DaVinci 128
When documenting overloaded signals or slots that include the \overload command in their documentation, QDoc generates the same overload note twice in the output HTML. The first occurrence appears as plain text, and the second appears formatted as a "Note:" admonition. Example: https://doc.qt.io/qt-6/qlcdnumber.html#display-1
| For Gerrit Dashboard: QTBUG-141771 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 689304,2 | QDoc: Fix duplicate overload notes for signals and slots | dev | qt/qttools | Status: MERGED | +2 | 0 |
| 689375,3 | QDoc: Fix duplicate overload notes for signals and slots | 6.10 | qt/qttools | Status: MERGED | +2 | 0 |