QDoc: Fix duplicate overload notes for signals and slots

QDoc generates duplicate overload documentation for signals and slots
that use the `\overload` command. The first occurrence appears as plain
text, and the second as a "Note:" admonition. This happens because two
code paths both generate overload notes.

This change adds guards to exclude signals and slots from the generic
path, since they're now handled by the specialized path that generates
contextual connection snippets. Regular overloaded functions continue
using the generic path, preserving existing behavior while eliminating
duplication for signals and slots.

Fixes: QTBUG-141771
Change-Id: Iaf191e5823d9e3053d4b4f260634c93ef19827d7
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
(cherry picked from commit 6618d604350749261ad195935b4df9bc272d6a9f)